[gd_scene load_steps=14 format=3 uid="uid://cg1dxchri27lj"]

[ext_resource type="Script" uid="uid://bwa7og0882iim" path="res://scripts/signup/signup.gd" id="1_jqkw8"]
[ext_resource type="Theme" uid="uid://d000yir3fpqb2" path="res://theme/panel_theme.tres" id="2_28klx"]
[ext_resource type="FontFile" uid="uid://ykf1mhpohd8q" path="res://assets/fonts/Lovelo Black.otf" id="2_jqkw8"]
[ext_resource type="PackedScene" uid="uid://d00fefnqdimrg" path="res://components/InputField.tscn" id="3_28klx"]
[ext_resource type="Texture2D" uid="uid://c0s6y44brf20c" path="res://assets/images/user.png" id="4_7me0i"]
[ext_resource type="Theme" uid="uid://ctg5ru4kl6ydx" path="res://theme/button_theme.tres" id="4_vrk3p"]
[ext_resource type="Texture2D" uid="uid://wj057r61auak" path="res://assets/images/email_icon.png" id="5_ht2v2"]
[ext_resource type="Texture2D" uid="uid://w4l0fe5bl263" path="res://assets/images/lock.png" id="5_vrk3p"]
[ext_resource type="PackedScene" uid="uid://exadjcdug6ee" path="res://components/Combobox.tscn" id="7_28klx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwikc"]
bg_color = Color(0.941176, 0.945098, 0.941176, 1)
border_width_left = 24
border_width_top = 24
border_width_right = 24
border_width_bottom = 24
border_color = Color(0.886275, 0.721569, 0.0313726, 1)
corner_radius_top_left = 52
corner_radius_top_right = 52
corner_radius_bottom_right = 52
corner_radius_bottom_left = 52

[sub_resource type="AtlasTexture" id="AtlasTexture_cwikc"]
atlas = ExtResource("5_ht2v2")
region = Rect2(674, 338, 652, 450)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws6qb"]
bg_color = Color(0.886275, 0.721569, 0.0313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 41
corner_radius_top_right = 41
corner_radius_bottom_right = 41
corner_radius_bottom_left = 41

[sub_resource type="LabelSettings" id="LabelSettings_28klx"]
font_size = 20
font_color = Color(1, 0, 0, 1)

[node name="Signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqkw8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_28klx")

[node name="SignupContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -274.0
offset_right = 550.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cwikc")

[node name="HBoxContainer" type="HBoxContainer" parent="SignupContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.5
offset_top = -200.5
offset_right = 485.5
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer1" type="VBoxContainer" parent="SignupContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SignupContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Firstname" parent="SignupContainer/HBoxContainer/VBoxContainer1/HBoxContainer" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SignupContainer/HBoxContainer/VBoxContainer1/HBoxContainer/Firstname"]
layout_mode = 0
offset_left = 10.0
offset_top = 14.0
offset_right = 48.0
offset_bottom = 44.0
texture = ExtResource("4_7me0i")
expand_mode = 2

[node name="Lastname" parent="SignupContainer/HBoxContainer/VBoxContainer1/HBoxContainer" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SignupContainer/HBoxContainer/VBoxContainer1/HBoxContainer/Lastname"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 50.0
offset_bottom = 44.0
expand_mode = 2

[node name="Email" parent="SignupContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SignupContainer/HBoxContainer/VBoxContainer1/Email"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 55.0
offset_bottom = 44.0
texture = SubResource("AtlasTexture_cwikc")
expand_mode = 2

[node name="GradeLevel" parent="SignupContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("7_28klx")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="SignupContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Password" parent="SignupContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SignupContainer/HBoxContainer/VBoxContainer2/Password"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 53.0
offset_bottom = 44.0
texture = ExtResource("5_vrk3p")
expand_mode = 2

[node name="LRN" parent="SignupContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_vertical = 3

[node name="Section" parent="SignupContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_28klx")]
layout_mode = 2
size_flags_vertical = 3

[node name="LoginLabel" type="Label" parent="SignupContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.5
offset_top = -25.0
offset_right = 111.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jqkw8")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_ws6qb")
text = "SignUp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignupBtnContainer" type="VBoxContainer" parent="SignupContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.5
offset_top = -169.0
offset_right = 96.5
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="SignupContainer/SignupBtnContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = ExtResource("4_vrk3p")
theme_type_variation = &"auth"
text = "Signup"

[node name="HTTPRequest" type="HTTPRequest" parent="SignupContainer/SignupBtnContainer/Button"]

[node name="RichTextLabel" type="RichTextLabel" parent="SignupContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.5
offset_top = -78.0
offset_right = 240.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]Already have an account?[/color] [color=blue]Click here[/color] [color=red][url=login]Login[/url][/color]"
horizontal_alignment = 1

[node name="ErrorText" type="Label" parent="SignupContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 66.0
offset_top = 69.5
offset_right = -61.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_28klx")
horizontal_alignment = 1

[connection signal="request_completed" from="SignupContainer/SignupBtnContainer/Button/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="meta_clicked" from="SignupContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
